# SFMLGame

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  linux.yml  windows.yml
